--- a/src/i18n/lang/en.i18n.json
+++ b/src/i18n/lang/en.i18n.json
@@ -133,7 +133,7 @@
         "showMenuBar": "Menu bar",
         "showOnUnreadMessage": "Show on unread messages",
         "showServerList": "Server list",
-        "showTrayIcon": "Tray icon",
+        "showTrayIcon": "To tray on close",
         "toggleDevTools": "Toggle &DevTools",
         "undo": "&Undo",
         "viewMenu": "&View",
