added option to change server

--- a/src/i18n/lang/en.i18n.json
+++ b/src/i18n/lang/en.i18n.json
@@ -139,7 +139,8 @@
         "viewMenu": "&View",
         "windowMenu": "&Window",
         "zoomIn": "Zoom in",
-        "zoomOut": "Zoom out"
+        "zoomOut": "Zoom out",
+        "changeServer": "Change server"
     },
     "loadingError": {
         "title": "Server Failed to Load",
