--- a/src/i18n/lang/de-DE.i18n.json
+++ b/src/i18n/lang/de-DE.i18n.json
@@ -117,7 +117,8 @@
         "viewMenu": "Darstellung",
         "windowMenu": "&Fenster",
         "zoomIn": "Vergrößern",
-        "zoomOut": "Verkleinern"
+        "zoomOut": "Verkleinern",
+        "changeServer": "Server ändern"
     },
     "loadingError": {
         "title": "Server konnte nicht geladen werden",
